# abalone

./: Cargo.toml
client/: Cargo.toml
client/src/: connection.rs  main.rs
core/: Cargo.toml
core/src/: dto.rs  lib.rs  stackvec.rs  test.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs  stackvec.rs  test.rs
