[package]
name = "abalone"
version = "0.1.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
edition = "2018"

[dependencies]
egui = { version = "0.23.0", features = ["persistence"] }
eframe = { version = "0.23.0", features = ["persistence"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_derive = "1.0"
