[workspace]
resolver = "2"
members = [
    "core",
    "client",
    "server",
]

[workspace.dependencies]
abalone_core = { path = "core" }
serde = { version = "1.0", features = ["serde_derive"] }
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "1.8.0", features = ["serde", "v4", "fast-rng"] }
tokio = { version = "1.38.0", features = ["rt"] }
futures-util = "0.3.30"
async-channel = "2.3"
