[package]
name = "abalone_client"
version = "0.1.0"
edition = "2021"

[dependencies]
abalone_core = { workspace = true }
egui = { version = "0.23.0", features = ["persistence"] }
eframe = { version = "0.23.0", features = ["persistence"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.20.1"
futures-util = { workspace = true }
async-channel = { workspace = true }
urlencoding = "2.1.3"
