[package]
name = "abalone_server"
version = "0.1.0"
edition = "2021"

[dependencies]
abalone_core = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.6.20", features = ["ws"] }
futures-util = { workspace = true }
async-channel = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
